--- a/GroceryApplicationProject/extent-reports/extent-report.html
+++ b/GroceryApplicationProject/extent-reports/extent-report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grocery Application</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 25, 2025 09:19:13 PM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 1, 2025 11:34:30 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInValidUserNameAndInValidPassword</p>
             <p class="text-sm">
-              <span>9:19:19 PM</span> / <span>00:00:00:874</span>
+              <span>11:34:34 AM</span> / <span>00:00:00:898</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInValidUserNameAndInValidPassword</h5>
-<span class='badge badge-success'>08.25.2025 9:19:19 PM</span>
-<span class='badge badge-danger'>08.25.2025 9:19:20 PM</span>
-<span class='badge badge-default'>00:00:00:874</span>
+<span class='badge badge-success'>09.01.2025 11:34:34 AM</span>
+<span class='badge badge-danger'>09.01.2025 11:34:35 AM</span>
+<span class='badge badge-default'>00:00:00:898</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:19:20 PM</td>
+        <td>11:34:35 AM</td>
         <td>
           Test Passed
         </td>
@@ -121,7 +121,7 @@
           <div class="test-detail">
             <p class="name">verifyUserLoginWithInValidUserNameAndInValidPassword</p>
             <p class="text-sm">
-              <span>9:19:22 PM</span> / <span>00:00:00:943</span>
+              <span>11:34:37 AM</span> / <span>00:00:00:847</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">verifyUserLoginWithInValidUserNameAndInValidPassword</h5>
-<span class='badge badge-success'>08.25.2025 9:19:22 PM</span>
-<span class='badge badge-danger'>08.25.2025 9:19:23 PM</span>
-<span class='badge badge-default'>00:00:00:943</span>
+<span class='badge badge-success'>09.01.2025 11:34:37 AM</span>
+<span class='badge badge-danger'>09.01.2025 11:34:38 AM</span>
+<span class='badge badge-default'>00:00:00:847</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -144,7 +144,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:19:23 PM</td>
+        <td>11:34:38 AM</td>
         <td>
           Test Passed
         </td>
@@ -168,13 +168,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 25, 2025 09:19:13 PM</h3>
+<h3>Sep 1, 2025 11:34:30 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 25, 2025 09:19:23 PM</h3>
+<h3>Sep 1, 2025 11:34:38 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -244,7 +244,7 @@
 </div></div>
 <script>
 var timeline = {
-"verifyUserLoginWithInValidUserNameAndInValidPassword":0.874,"verifyUserLoginWithInValidUserNameAndInValidPassword":0.943
+"verifyUserLoginWithInValidUserNameAndInValidPassword":0.898,"verifyUserLoginWithInValidUserNameAndInValidPassword":0.847
 };
 </script>
 <div class="row">
